Fix T65408: GPencil Weight Paint, strength and falloff are ignored when painting a lesser vertexweight

The value was clamped to minimum value before checking the influence.