source/blender/editors/gpencil/gpencil_brush.c
@@ -922,16 +922,20 @@ static bool gp_brush_weight_apply(
   float curweight = dw ? dw->weight : 0.0f;
 
   if (gp_brush_invert_check(gso)) {
-    /* reduce weight */
-    curweight -= inf;
+    /* reduce weight (verify mainimum target) */
+    if (curweight - inf < gso->gp_brush->weight) {
+      curweight = gso->gp_brush->weight;
+    }
+    else {
+      curweight -= inf;
+    }
   }
   else {
     /* increase weight */
     curweight += inf;
+    /* verify maximum target weight */
+    CLAMP_MAX(curweight, gso->gp_brush->weight);
   }
-
-  /* verify target weight */
-  CLAMP_MAX(curweight, gso->gp_brush->weight);
 
   CLAMP(curweight, 0.0f, 1.0f);
   if (dw) {
